@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-13T08:08:10Z",
+  "timestamp" : "2023-10-20T08:07:52Z",
   "count_outdated" : 211,
   "uniques_outdated" : 148,
-  "count" : 214,
-  "uniques" : 150,
+  "count" : 215,
+  "uniques" : 151,
   "clones" : [
     {
       "timestamp": "2023-10-10T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2023-10-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
