@@ -1,3 +1,12 @@
+2023-10-20T08:07:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6585080628 # 1300
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-20
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 148 211 / 150 214
+* notice: next accum: outdated-unq outdated-all / unq all: 148 211 / 151 215
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-20]
+
 2023-10-13T08:08:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6505670292 # 1279
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
